--- a/style.css
+++ b/style.css
@@ -7,46 +7,395 @@
 
 /*footer {
     font-family: 'PT Sans', sans-serif;
+     color: #b1d4e0;
 }*/
 
 /* Making changes to the whole body*/
 
 body {
-    background-color: #eeeee8;
+    background-color: #cdcdbde3;
 }
 
-
-/* header section */
-
-.header {
-    background-color: #305f75;
+.whoWeAre {
     display: flex;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    align-items: stretch;
+    flex-direction: column;
+    align-items: center;
+}
 
+h2 {
+    color:#305f75;
+    font-family: 'PT Sans', sans-serif;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-bottom: 25px;
+}
+
+.whoWeAre .p {
+    height: 700px;
+    font-family: 'PT Sans', sans-serif;
+    display: block;
+    width: 500px;
+}
+
+.whoWeAre .WillisAndMaverick {
+    height: 500px;
+    width: auto;
+    
+
+}
+/*Header section on the faqs page */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html,body{
+    min-width: 100%;
+    overflow-x: hidden;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  header .navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    min-height: 12vh;
+    min-width: 100%;
+    z-index: 10;
+    background: #0f1423;
+    border-bottom: 2px solid #0c2d48;
+  }
+  
+  header .navigation .logo{
+    margin-left: 20px;
+  }
+  
+  header .navigation .logo h1{
+    color: #b1d4e0;
+    font-size: 30px;
+    line-height: 38px;
+  }
+  
+  header .navigation .menu-list {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 45%;
+    margin: auto 20px auto 0;
+  }
+  
+  header .navigation .humbarger {
+    margin-right: 20px;
+    display: none;
+   }
+   
+  header .navigation .humbarger .bar{
+    width: 30px;
+    height: 2px;
+    margin: 7px;
+    background: #b1d4e0;
+   }
+  
+  header .navigation .menu-list li a {
+    color: #b1d4e0;
+    font-size: 1.25rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: color 1s ease, border 1s ease;
+    text-decoration: none;
+  }
+  
+  /* ====================
+    Intro Section
+  =======================*/
+  .intro-section {
+    height: 100vh;
+    position: relative;
+    background: rgba(15, 20, 35, 0.9);
+  }
+  
+  .intro-section .intro-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+  
+  .intro-section .intro-content h1 {
+    color: #b1d4e0;
+    font-size: 5rem;
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    margin-top: 80px;
+  }
+  
+  .intro-section .intro-content h6{
+    margin-top: 5px;
+    color: #b1d4e0;
+    font-size: 2.5rem;
+    font-weight: 300;
+  }
+  
+  .intro-section .intro-content p {
+    margin-top: 40px;
+    color: #b1d4e0;
+  }
+  
+  .intro-content .tagline {
+    margin-top:80px;
+  }
+  
+  .intro-section .intro-content .tagline .change-container{
+      position: relative;
+    display: inline-block;
+    width: 560px;
+    margin-bottom: 55px;
+      margin-top: 30px;
+  }
+  
+  .intro-section .intro-content .changing {
+      position: absolute;
+      overflow: hidden;
+    width: 100%;
+    left:0;
+    bottom:0;
+    height:0;
+    opacity:0;
+    color: #b1d4e0;
+    text-transform: uppercase;
+    word-spacing: 5px;
+      text-align: center;
+      font-size: 2.5rem;
+  }
+  
+  .changing:nth-child(1) {
+    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 1.5s infinite;
+  }
+  
+  .changing:nth-child(2) {
+    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 3s infinite;
+  }
+  
+  .changing:nth-child(3) {
+    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 4.5s infinite;
+  }
+  
+  @keyframes revealNextWord {
+    0% { 
+      opacity: 0.3; 
+      height: 0.0; 
+    }
+    10% { 
+      opacity: 1; 
+      height:1.2em; 
+    }
+    20% { 
+      opacity: 1; 
+      height:1.2em; 
+    }
+    28% { 
+      opacity: 0; 
+      height:2em; 
+    }
+    
+  }
+  
+  .intro-section .intro-content .header-btn a{
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #3498db;
+    background-color: #b1d4e0;
+    padding: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    text-transform: uppercase;
+  }
+  
+  .intro-section .intro-content .header-btn a:before{
+    position: absolute;
+    content: ""; 
+    top: 0px;
+    height: 100%;
+    left: -25%;
+    width: 0%;
+    background-color: #3498db;
+    transform: skew(50deg);
+    transition-duration: 1s;
+    z-index: 1;
+  }
+  
+  .intro-section .intro-content .header-btn a:hover{
+    color: #b1d4e0;
+  }
+  
+  .intro-section .intro-content .header-btn a:hover:before{
+    width: 170%;
+  
+  }
+  
+  .intro-section .intro-content .header-btn a span{
+      position: relative;
+      z-index: 9;
+  }
+  
+  /* ====================
+    Responsive Section
+  =======================*/
+  
+  /* Tablet desktop :768px. */
+  
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+    header .navigation .menu-list {
+      width: 60%;
+    }
+  
+    header .navigation .menu-list li a{
+      font-size: 1rem;
+    }
+  
+  }
+  
+  /* Large Mobile :480px. */
+  
+  @media only screen and (max-width: 767px) {
+  
+    header .navigation .menu-list {
+      position: absolute;
+      top: 12vh;
+      min-width: 100%;
+      background: rgba(15, 20, 35, 0.99);
+      text-align: center;
+      display: none;
+    }
+  
+    header .navigation .menu-list li {
+      display: block;
+    }
+  
+    header .navigation .menu-list li a {
+      display: block;
+      padding: 20px;
+      transition: color 1s ease, padding 1s ease, background-color 1s ease;
+  
+    }
+  
+    header .navigation .menu-list li a:hover{
+      color: #b1d4e0;
+      padding-left: 30px;
+      background: rgba(177, 212, 224, 0.2);
+    }
+  
+  
+    header .navigation .hamburger{
+      display: block;
+    }
+  
+    .intro-section .intro-content h1 {
+      font-size: 2.8rem;
+    }
+  
+    .intro-section .intro-content h6 {
+      font-size: 1.4rem;
+    }
+  
+    .intro-section .intro-content .changing {
+      font-size: 1.5rem;
+    }
+  
+    .intro-section .intro-content .header-btn a{
+      font-size: 1.25rem;
+    }
+  
+  }
+  
+  
+  /* small mobile :320px. */
+  
+  @media only screen and (max-width: 479px) {
+  
+    .intro-inner .intro-content h1 {
+      font-size: 2rem;
+      letter-spacing: 1px;
+    }
+  
+    .intro-inner .intro-content p {
+      margin-top: 10px;
+    }
+  
+  }
+      
+  
+ 
+
+
+
+
+/* This has to do with the navigation links inside the header on the Home page*/
+
+.topnav {
+    background: #305f75;
+    overflow: hidden;
+    position: sticky;
+  
+}
+header .logo {
+    display: flex;
+    margin-left: 10px;
+    flex-wrap: nowrap;
+    
   }
 
-/* This has to do with the navigation links inside footer */
-
-.header .navlinks {
-    display: flex;
-    font-style: bold;
-    font-size: 14px;
-    font-family: 'PT Sans', sans-serif;
-    list-style: none;
-    margin-left: 80%;
-    flex-direction: column;
-}
-
-.header ul li a {
+  header .logo img {
+    height: 40px;
+    color: #b1d4e0;
+    margin: 2px;
+  }
+  
+  header .logo h1{
+    color: #b1d4e0;
+    font-size: 18px;
+    margin-top: 4px;
+  }
+.topnav a {
     color:aliceblue;
     font-weight: bold;
     text-decoration: none;
+        float: right;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+
 }
+
+.topnav a.active {
+    background-color:#0f1423;
+    color: white;
+}
+
+.topnav a:hover {
+    background-color: gray;
+    color: black;
+}
+
+.topnav .icon {
+    display: none;
+}
+
 
 .logo {
     display: flex;
@@ -54,6 +403,28 @@ body {
     font-weight: bold;
     text-decoration: none;
 }
+
+@media screen and (max-width: 800px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
 
 /* hero section - to make the hero image stay when scroll */
 
@@ -76,22 +447,23 @@ main h1 {
     color: #306178;
     font-family: 'PT Sans', sans-serif;
     margin: 40px;
-    
-
-    
 }
 
 /* Make the navbar go to the bottom of the page */
 
-.navbar {
+.footer {
+    display: flex;
+}
+.footer .navbar {
     background-color: #305f75;
-    display: inline-flex;
+    display: flex;
     overflow: hidden;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     position: sticky;
+    flex-direction: column;
   }
 
   /* Change color of all footer links when hover */
@@ -103,9 +475,10 @@ main h1 {
 /* This has to do with the navigation links inside footer */
 
 .navbar .navlinks {
-    margin-left: -20px;
+    margin-left: 20px;
+    margin-top: 20px;
     font-style: bold;
-    font-size: 14px;
+    font-size: 20px;
     font-family: 'PT Sans', sans-serif;
     list-style: none;
 
@@ -116,18 +489,15 @@ main h1 {
     font-weight: bold;
     text-decoration: none;
 }
-  
+
 /* This has to do with the social media links inside footer */
 
-.navbar .social {
+.social {
     font-style: bold;
     font-size: 18px;
     font-family: 'PT Sans', sans-serif;
     list-style: none;
     display: flex;
-    align-items: flex-end;
-    flex-wrap: nowrap;
-    flex-direction: column;
     width: 100%;
     position: sticky;
 }
@@ -135,6 +505,7 @@ main h1 {
 .navbar .social p {
     color: aliceblue;
     margin: 20px;
+    margin-top: 20px;
     font-size: 12px;
     width: 100%;
 }
@@ -159,3 +530,5 @@ main h1 {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: ;*/
+
+    
