Added Meet the Animals Page and updated main of Home page

--- a/style.css
+++ b/style.css
@@ -5,530 +5,382 @@
 */
 
 
-/*footer {
-    font-family: 'PT Sans', sans-serif;
-     color: #b1d4e0;
-}*/
-
 /* Making changes to the whole body*/
 
 body {
-    background-color: #cdcdbde3;
+  background-color: #eceee8;
 }
 
-.whoWeAre {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.who-we-are {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
-h2 {
-    color:#305f75;
-    font-family: 'PT Sans', sans-serif;
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-bottom: 25px;
+.who-we-are p {
+  font-family: 'Playfair Display', serif;
+  line-height: 1.75;
+  padding: 4rem 1rem;
+  text-align: center;
+  padding: 10px;
+  color: #0f1423;
+  font-weight: 900;
 }
 
-.whoWeAre .p {
-    height: 700px;
-    font-family: 'PT Sans', sans-serif;
-    display: block;
-    width: 500px;
+.who-we-are .willis-and-maverick-one {
+  height: 15rem;
+  max-width: 100%;
+  padding: 0px;
 }
 
-.whoWeAre .WillisAndMaverick {
-    height: 500px;
-    width: auto;
-    
+.button:hover {
+  background-color: black;
+  }
 
+  .button {
+    width: 1300px;
+  }
+.button .donate:hover {
+  color: #dadecf;
+  background-color: black;
 }
-/*Header section on the faqs page */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html,body{
-    min-width: 100%;
-    overflow-x: hidden;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  header .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    min-height: 12vh;
-    min-width: 100%;
-    z-index: 10;
-    background: #0f1423;
-    border-bottom: 2px solid #0c2d48;
-  }
-  
-  header .navigation .logo{
-    margin-left: 20px;
-  }
-  
-  header .navigation .logo h1{
-    color: #b1d4e0;
-    font-size: 30px;
-    line-height: 38px;
-  }
-  
-  header .navigation .menu-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 45%;
-    margin: auto 20px auto 0;
-  }
-  
-  header .navigation .humbarger {
-    margin-right: 20px;
-    display: none;
-   }
-   
-  header .navigation .humbarger .bar{
-    width: 30px;
-    height: 2px;
-    margin: 7px;
-    background: #b1d4e0;
-   }
-  
-  header .navigation .menu-list li a {
-    color: #b1d4e0;
-    font-size: 1.25rem;
+ .button a {
+    text-decoration: none;
+    color: black;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: color 1s ease, border 1s ease;
-    text-decoration: none;
-  }
-  
-  /* ====================
-    Intro Section
-  =======================*/
-  .intro-section {
-    height: 100vh;
-    position: relative;
-    background: rgba(15, 20, 35, 0.9);
-  }
-  
-  .intro-section .intro-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-  }
-  
-  .intro-section .intro-content h1 {
-    color: #b1d4e0;
-    font-size: 5rem;
-    letter-spacing: -1px;
-    text-transform: uppercase;
-    margin-top: 80px;
-  }
-  
-  .intro-section .intro-content h6{
-    margin-top: 5px;
-    color: #b1d4e0;
-    font-size: 2.5rem;
-    font-weight: 300;
-  }
-  
-  .intro-section .intro-content p {
-    margin-top: 40px;
-    color: #b1d4e0;
-  }
-  
-  .intro-content .tagline {
-    margin-top:80px;
-  }
-  
-  .intro-section .intro-content .tagline .change-container{
-      position: relative;
-    display: inline-block;
-    width: 560px;
-    margin-bottom: 55px;
-      margin-top: 30px;
-  }
-  
-  .intro-section .intro-content .changing {
-      position: absolute;
-      overflow: hidden;
-    width: 100%;
-    left:0;
-    bottom:0;
-    height:0;
-    opacity:0;
-    color: #b1d4e0;
-    text-transform: uppercase;
-    word-spacing: 5px;
-      text-align: center;
-      font-size: 2.5rem;
-  }
-  
-  .changing:nth-child(1) {
-    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 1.5s infinite;
-  }
-  
-  .changing:nth-child(2) {
-    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 3s infinite;
-  }
-  
-  .changing:nth-child(3) {
-    animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 4.5s infinite;
-  }
-  
-  @keyframes revealNextWord {
-    0% { 
-      opacity: 0.3; 
-      height: 0.0; 
-    }
-    10% { 
-      opacity: 1; 
-      height:1.2em; 
-    }
-    20% { 
-      opacity: 1; 
-      height:1.2em; 
-    }
-    28% { 
-      opacity: 0; 
-      height:2em; 
-    }
-    
-  }
-  
-  .intro-section .intro-content .header-btn a{
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: #3498db;
-    background-color: #b1d4e0;
-    padding: 15px;
-    border-radius: 5px;
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    text-transform: uppercase;
-  }
-  
-  .intro-section .intro-content .header-btn a:before{
-    position: absolute;
-    content: ""; 
-    top: 0px;
-    height: 100%;
-    left: -25%;
-    width: 0%;
-    background-color: #3498db;
-    transform: skew(50deg);
-    transition-duration: 1s;
-    z-index: 1;
-  }
-  
-  .intro-section .intro-content .header-btn a:hover{
-    color: #b1d4e0;
-  }
-  
-  .intro-section .intro-content .header-btn a:hover:before{
-    width: 170%;
-  
-  }
-  
-  .intro-section .intro-content .header-btn a span{
-      position: relative;
-      z-index: 9;
-  }
-  
-  /* ====================
-    Responsive Section
-  =======================*/
-  
-  /* Tablet desktop :768px. */
-  
-  @media only screen and (min-width: 768px) and (max-width: 991px) {
-    header .navigation .menu-list {
-      width: 60%;
-    }
-  
-    header .navigation .menu-list li a{
-      font-size: 1rem;
-    }
-  
-  }
-  
-  /* Large Mobile :480px. */
-  
-  @media only screen and (max-width: 767px) {
-  
-    header .navigation .menu-list {
-      position: absolute;
-      top: 12vh;
-      min-width: 100%;
-      background: rgba(15, 20, 35, 0.99);
-      text-align: center;
-      display: none;
-    }
-  
-    header .navigation .menu-list li {
-      display: block;
-    }
-  
-    header .navigation .menu-list li a {
-      display: block;
-      padding: 20px;
-      transition: color 1s ease, padding 1s ease, background-color 1s ease;
-  
-    }
-  
-    header .navigation .menu-list li a:hover{
-      color: #b1d4e0;
-      padding-left: 30px;
-      background: rgba(177, 212, 224, 0.2);
-    }
-  
-  
-    header .navigation .hamburger{
-      display: block;
-    }
-  
-    .intro-section .intro-content h1 {
-      font-size: 2.8rem;
-    }
-  
-    .intro-section .intro-content h6 {
-      font-size: 1.4rem;
-    }
-  
-    .intro-section .intro-content .changing {
-      font-size: 1.5rem;
-    }
-  
-    .intro-section .intro-content .header-btn a{
-      font-size: 1.25rem;
-    }
-  
-  }
-  
-  
-  /* small mobile :320px. */
-  
-  @media only screen and (max-width: 479px) {
-  
-    .intro-inner .intro-content h1 {
-      font-size: 2rem;
-      letter-spacing: 1px;
-    }
-  
-    .intro-inner .intro-content p {
-      margin-top: 10px;
-    }
-  
-  }
-      
-  
+       font-size: 20px;
+            
+ }
+
+.button .donate {
+  border: 2px solid black;
+  background-color: #dadecf;
+  padding: 20px;
+  align-items: center;
+  margin: 20px;
  
+}
 
+/* Meet the animals page*/
 
+.the-animals-on-farm {
+display: flex;
+text-align: center;
+width: 100%;
+}
+
+.the-animals-on-farm ul {
+  width: 100%;
+  display: flex;
+  flex-wrap: no-wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 40px;
+  flex-direction: column;
+}
+
+  .the-animals-on-farm img {
+    height: 15rem;
+    width: auto;
+    border-radius: 48%;
+    margin: 20px;
+    padding: 5px;
+    background-color: #0f1423;
+  }
 
 
 /* This has to do with the navigation links inside the header on the Home page*/
 
 .topnav {
-    background: #305f75;
-    overflow: hidden;
-    position: sticky;
-  
-}
-header .logo {
-    display: flex;
-    margin-left: 10px;
-    flex-wrap: nowrap;
-    
-  }
+  background: #305f75;
+  overflow: hidden;
+  position: sticky;
 
-  header .logo img {
-    height: 40px;
-    color: #b1d4e0;
-    margin: 2px;
-  }
-  
-  header .logo h1{
-    color: #b1d4e0;
-    font-size: 18px;
-    margin-top: 4px;
-  }
+}
+
+header .logo {
+  display: flex;
+  margin-left: 2px;
+  margin-top: -7px;
+  flex-wrap: nowrap;
+
+}
+
+header .logo img {
+  height: 65px;
+  color: #b1d4e0;
+}
+
+header .logo h1 {
+  color: #b1d4e0;
+  font-size: 18px;
+  margin-top: 4px;
+}
+
 .topnav a {
-    color:aliceblue;
-    font-weight: bold;
-    text-decoration: none;
-        float: right;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
+  color: aliceblue;
+  font-weight: bold;
+  text-decoration: none;
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 
 }
 
 .topnav a.active {
-    background-color:#0f1423;
-    color: white;
+  background-color: #0f1423;
+  color: white;
 }
 
 .topnav a:hover {
-    background-color: gray;
-    color: black;
+  background-color: gray;
+  color: black;
 }
 
 .topnav .icon {
-    display: none;
+  display: none;
 }
-
 
 .logo {
-    display: flex;
-    color:aliceblue;
-    font-weight: bold;
-    text-decoration: none;
+  display: flex;
+  color: aliceblue;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-@media screen and (max-width: 800px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-
-  @media screen and (max-width: 800px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
 
 /* hero section - to make the hero image stay when scroll */
 
-.hero {
-    width: 100%;
-    height: 600px;
-    background-position: center;
-    background-size: cover;
-    background-image: url(img/Pig\ Photo.png);
-    background-attachment: fixed;
+.hero-main {
+  width: 100%;
+  height: 300px;
+  background-position: center -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/Maverick\ Baby.JPG);
+  background-attachment: fixed;
 
-    color: white;
-    display: flex;
-    align-items: flex-end;
-    font-size: 40px;
-    font-family: 'PT Sans', sans-serif;
+
+  color: aliceblue;
+  text-shadow: 6px 6px 6px #0f1423;
+
+  display: flex;
+  align-items: flex-end;
+  font-size: 30px;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
 }
 
-main h1 {
-    color: #306178;
-    font-family: 'PT Sans', sans-serif;
-    margin: 40px;
+.hero-meet-the-animals {
+  width: 100%;
+  height: 300px;
+  background-position: center -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/Meet\ the\ Animals\ Banner.jpeg);
+  background-attachment: fixed;
+
+
+  color: aliceblue;
+  text-shadow: 6px 6px 6px #0f1423;
+
+  display: flex;
+  align-items: flex-end;
+  font-size: 30px;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
 }
+  
+
 
 /* Make the navbar go to the bottom of the page */
 
 .footer {
-    display: flex;
+  display: flex;
 }
-.footer .navbar {
-    background-color: #305f75;
-    display: flex;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    position: sticky;
-    flex-direction: column;
-  }
 
-  /* Change color of all footer links when hover */
+.footer .navbar {
+  background-color: #305f75;
+  display: flex;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: sticky;
+  flex-direction: column;
+}
+
+/* Change color of all footer links when hover */
 
 .navbar a:hover {
-    color: gray
+  color: gray
 }
 
 /* This has to do with the navigation links inside footer */
 
 .navbar .navlinks {
-    margin-left: 20px;
-    margin-top: 20px;
-    font-style: bold;
-    font-size: 20px;
-    font-family: 'PT Sans', sans-serif;
-    list-style: none;
+  margin-left: 20px;
+  margin-top: 20px;
+  font-style: bold;
+  font-size: 20px;
+  font-family: 'PT Sans', sans-serif;
+  list-style: none;
 
+}
+.navbar ul li {
+  text-align: center;
 }
 
 .navbar ul li a {
-    color:aliceblue;
-    font-weight: bold;
-    text-decoration: none;
+  color: aliceblue;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 /* This has to do with the social media links inside footer */
 
 .social {
-    font-style: bold;
-    font-size: 18px;
-    font-family: 'PT Sans', sans-serif;
-    list-style: none;
-    display: flex;
-    width: 100%;
-    position: sticky;
+  font-style: bold;
+  font-size: 18px;
+  font-family: 'PT Sans', sans-serif;
+  list-style: none;
+  display: flex;
+  width: 100%;
+  position: sticky;
 }
 
 .navbar .social p {
-    color: aliceblue;
-    margin: 20px;
-    margin-top: 20px;
-    font-size: 12px;
-    width: 100%;
+  color: aliceblue;
+  margin: 20px;
+  margin-top: 20px;
+  font-size: 12px;
+  width: 100%;
 }
 
 .navbar .social .fa {
-    list-style: none;
-    display: flex;
-    flex-wrap: nowrap;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    font-size: 30px;
-    color:rgb(6, 158, 67);
-    font-weight: bolder;
-    text-decoration: none;
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 30px;
+  color: rgb(6, 158, 67);
+  font-weight: bolder;
+  text-decoration: none;
 
 }
 
+
+
+
+@media screen and (max-width: 800px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .meet-the-animals .text-block {
+    bottom: 2rem;
+    right: 2rem;
+    font-size: 40px;
+  }
+    .who-we-are {
+      flex-direction: row;
+      max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+  .hero {
+  background-position: center -350px;
+  height: 300px;
+  }
+
+  .who-we-are {
+    flex-direction: row-reverse;
+    max-width: 100%;
+  }
+}
+
+
 /* This has to do with the 501c line inside footer */
- 
+
 
 /*display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: ;*/
 
-    
+
+/*
+/* Meet the Animals Banner
+
+.meet-the-animals {
+  position: relative;
+}
+
+.meet-the-animals .text-block {
+  position: absolute;
+  color: aliceblue;
+  bottom: .5rem;
+  right: .5rem;
+  font-size: 150%;
+  font-family: 'PT Sans', sans-serif;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
