--- a/style.css
+++ b/style.css
@@ -34,13 +34,7 @@ body {
   padding: 0px;
 }
 
-.button:hover {
-  background-color: black;
-  }
 
-  .button {
-    width: 1300px;
-  }
 .button .donate:hover {
   color: #dadecf;
   background-color: black;
@@ -50,14 +44,20 @@ body {
     color: black;
     letter-spacing: 2px;
        font-size: 20px;
-            
+ }
+
+ .button {
+  display: flex;
+  justify-content: center;
  }
 
 .button .donate {
+  display: flex;
   border: 2px solid black;
   background-color: #dadecf;
   padding: 20px;
   align-items: center;
+  justify-content: center;
   margin: 20px;
  
 }
@@ -90,9 +90,62 @@ width: 100%;
     border-radius: 48%;
     margin: 20px;
     padding: 5px;
-    background-color: #0f1423;
+    background-color: #0f1423;  }
+
+  .the-animals-on-farm ul li {
+    display: flex;
+    flex-direction: column;
+     }
+
+    
+ .the-animals-on-farm .list-of-animals ul li {
+    position: relative;
+    height: 15rem;
+    width: auto;
+  }
+/*
+  .loretta-img {
+    display: block;
+     }
+
+  .loretta-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:rgb(0, 0, 0, 0.6);
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity .25s;
   }
 
+  .loretta-overlay > * {
+    transform: translateY(20px);
+    transition: transform .25s;
+  }
+  .loretta-overlay:hover {
+    opacity: 1;
+  }
+
+  .loretta-overlay:hover > * {
+    transform: translateY(0);
+  }
+
+  .loretta-title {
+    font-size: 2em;
+    font-weight: bold;
+  }
+
+  .loretta-description {
+    font-size: 1.25em;
+    margin-top: .25em;
+  }
+*/
 
 /* This has to do with the navigation links inside the header on the Home page*/
 
@@ -168,11 +221,8 @@ header .logo h1 {
   background-size: cover;
   background-image: url(img/Maverick\ Baby.JPG);
   background-attachment: fixed;
-
-
   color: aliceblue;
   text-shadow: 6px 6px 6px #0f1423;
-
   display: flex;
   align-items: flex-end;
   font-size: 30px;
@@ -188,11 +238,8 @@ header .logo h1 {
   background-size: cover;
   background-image: url(img/Meet\ the\ Animals\ Banner.jpeg);
   background-attachment: fixed;
-
-
   color: aliceblue;
   text-shadow: 6px 6px 6px #0f1423;
-
   display: flex;
   align-items: flex-end;
   font-size: 30px;
@@ -200,8 +247,54 @@ header .logo h1 {
   font-family: 'PT Sans', sans-serif;
 }
   
-
-
+.hero-faqs {
+  width: 100%;
+  height: 300px;
+  background-position: center -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/FAQs.jpg);
+  background-attachment: fixed;
+  color: aliceblue;
+  text-shadow: 6px 6px 6px #0f1423;
+  display: flex;
+  align-items: flex-end;
+  font-size: 30px;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
+}
+.hero-donate {
+  width: 100%;
+  height: 300px;
+  background-position: center -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/Donate\ Photo.png);
+  background-attachment: fixed;
+  color: aliceblue;
+  text-shadow: 6px 6px 6px #0f1423;
+  display: flex;
+  align-items: flex-end;
+  font-size: 30px;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
+}
+.hero-contact {
+  width: 100%;
+  height: 300px;
+  background-position: center -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/Contact\ Photo.jpg);
+  background-attachment: fixed;
+  color: aliceblue;
+  text-shadow: 6px 6px 6px #0f1423;
+  display: flex;
+  align-items: flex-end;
+  font-size: 30px;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
+}
 /* Make the navbar go to the bottom of the page */
 
 .footer {
@@ -213,11 +306,10 @@ header .logo h1 {
   display: flex;
   overflow: hidden;
   position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   position: sticky;
   flex-direction: column;
+  height: 250px;
 }
 
 /* Change color of all footer links when hover */
@@ -229,8 +321,7 @@ header .logo h1 {
 /* This has to do with the navigation links inside footer */
 
 .navbar .navlinks {
-  margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   font-style: bold;
   font-size: 20px;
   font-family: 'PT Sans', sans-serif;
@@ -320,10 +411,17 @@ header .logo h1 {
       flex-direction: row;
       max-width: 100%;
     }
-}
+    .the-animals-on-farm ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+       column-gap: 4rem;
+       row-gap: 70px;
+      
+    }
 
 @media screen and (min-width: 1100px) {
-  .hero {
+  .hero-main {
   background-position: center -350px;
   height: 300px;
   }
@@ -332,6 +430,16 @@ header .logo h1 {
     flex-direction: row-reverse;
     max-width: 100%;
   }
+  .the-animals-on-farm ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    column-gap: 15px;
+         }
+.the-animals-on-farm img {
+  width: auto;
+}
+  
 }
 
 
