--- a/style.css
+++ b/style.css
@@ -15,40 +15,59 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 5px;
+  
+  
+}
+.who-we-are .who-we-are-words {
+   flex-grow: 1;
 }
 
-.who-we-are p {
+.who-we-are .who-we-are-header {
+  position: relative;
+  top: 1em;
+  right: 1em;
+  width: 6em;
+  text-align: center;
+  background-color: #0f1423;
+  color: #f2f2f2;
+}
+
+.who-we-are .who-we-are-paragraph {
   font-family: 'Playfair Display', serif;
   line-height: 1.75;
   padding: 4rem 1rem;
   text-align: center;
-  padding: 10px;
-  color: #0f1423;
+  padding: 1.5em;
   font-weight: 900;
+  background-color: hsl(170, 25%, 95%);
+  border-radius: 15px;
+  color: #0f1423;
+  background-blend-mode: lighten;
 }
 
 .who-we-are .willis-and-maverick-one {
-  height: 15rem;
-  max-width: 100%;
-  padding: 0px;
+  height: 20em;
+  padding: 10px;
+  max-width: 80%;
 }
 
 
 .button .donate:hover {
   color: #dadecf;
-  background-color: black;
+  background-color: #0f1423;
 }
  .button a {
     text-decoration: none;
-    color: black;
+    color: #0f1423;
     letter-spacing: 2px;
-       font-size: 20px;
+    font-size: 20px;
  }
 
  .button {
   display: flex;
   justify-content: center;
+  margin: 20px;
  }
 
 .button .donate {
@@ -59,9 +78,40 @@ body {
   align-items: center;
   justify-content: center;
   margin: 20px;
- 
 }
 
+.mission {
+  display: flex;
+  flex-direction: column;
+  width: 60rem;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #d4d4d1;
+  background-blend-mode: lighten;
+  padding-top: 40px;
+}
+
+h2 {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 2rem;
+  margin: 0;
+  padding: 0;
+  }
+
+.mission p {
+font-family: 'Playfair Display', serif;
+line-height: 1.75;
+font-size: 1.25rem;
+text-align: center;
+color: #0f1423;
+font-weight: bold;
+width: 80%;
+}
+
+.new-farm .new-farm-header {
+
+}
 /* Meet the animals page*/
 
 .the-animals-on-farm {
@@ -103,6 +153,28 @@ width: 100%;
     height: 15rem;
     width: auto;
   }
+
+  .animal-description {
+    display: flex;
+    width: 60rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 2rem;
+    background-color: #d4d4d1;
+    background-blend-mode: lighten;
+  }
+
+  .animal-description p {
+  font-family: 'Playfair Display', serif;
+  line-height: 1.75;
+  font-size: 1.25rem;
+  text-align: center;
+  color: #0f1423;
+  font-weight: bold;
+  width: 80%;
+  }
+
 /*
   .loretta-img {
     display: block;
@@ -210,7 +282,6 @@ header .logo h1 {
   text-decoration: none;
 }
 
-
 /* hero section - to make the hero image stay when scroll */
 
 .hero-main {
@@ -219,7 +290,7 @@ header .logo h1 {
   background-position: center -300px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(img/Maverick\ Baby.JPG);
+  background-image: url(img/Contact\ Photo.jpg);
   background-attachment: fixed;
   color: aliceblue;
   text-shadow: 6px 6px 6px #0f1423;
@@ -285,7 +356,7 @@ header .logo h1 {
   background-position: center -300px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(img/Contact\ Photo.jpg);
+  background-image: url(img/Maverick\ Baby.JPG);
   background-attachment: fixed;
   color: aliceblue;
   text-shadow: 6px 6px 6px #0f1423;
@@ -295,6 +366,8 @@ header .logo h1 {
   line-height: 1;
   font-family: 'PT Sans', sans-serif;
 }
+
+
 /* Make the navbar go to the bottom of the page */
 
 .footer {
@@ -326,7 +399,8 @@ header .logo h1 {
   font-size: 20px;
   font-family: 'PT Sans', sans-serif;
   list-style: none;
-
+  margin-left: none;
+  padding: 0;
 }
 .navbar ul li {
   text-align: center;
