--- a/style.css
+++ b/style.css
@@ -15,18 +15,19 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px;
-  
-  
+  padding: 2px; 
+  margin: 2rem 0; 
+  background-color: #d4d4d1;
 }
+
 .who-we-are .who-we-are-words {
-   flex-grow: 1;
+   margin: 0px 30px 10px 30px;
 }
 
 .who-we-are .who-we-are-header {
   position: relative;
   top: 1em;
-  right: 1em;
+  right: .75em;
   width: 6em;
   text-align: center;
   background-color: #0f1423;
@@ -36,20 +37,19 @@ body {
 .who-we-are .who-we-are-paragraph {
   font-family: 'Playfair Display', serif;
   line-height: 1.75;
-  padding: 4rem 1rem;
   text-align: center;
   padding: 1.5em;
   font-weight: 900;
   background-color: hsl(170, 25%, 95%);
-  border-radius: 15px;
   color: #0f1423;
-  background-blend-mode: lighten;
 }
 
 .who-we-are .willis-and-maverick-one {
-  height: 20em;
-  padding: 10px;
+  height: 15em;
   max-width: 80%;
+  background: #0f1423;
+  padding: 30px 0px;
+  background-color: #0f1423;
 }
 
 
@@ -80,7 +80,79 @@ body {
   margin: 20px;
 }
 
-.mission {
+.how-donations-help {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.how-donations-help .how-donations-help-header {
+  color: #0f1423;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-bottom: .5rem;
+  margin-top: 1em;
+}
+
+.how-donations-help .how-donations-help-list-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.how-donations-help-housing-container {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-top: 2em;
+}
+.how-donations-help-animal-feed-container {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-top: 2em;
+
+}
+.how-donations-help-medical-container {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-top: 2em;
+
+}
+.how-donations-help .how-donations-help-list-container img {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 10em;
+height: 10em;
+  }
+
+.how-donations-help-housing-paragraph {
+  display: flex;
+  text-align: center;
+  max-width: 60%;
+  margin-top: 0px;
+  }
+
+  .how-donations-help-animal-feed-paragraph {
+    display: flex;
+    text-align: center;
+    max-width: 60%;
+    margin-top: 0px;
+    }
+
+  .how-donations-help-medical-paragraph {
+  display: flex;
+  text-align: center;
+  max-width: 60%;
+  margin-top: 0px;
+  }
+
+  .mission {
   display: flex;
   flex-direction: column;
   width: 60rem;
@@ -89,7 +161,8 @@ body {
   width: 100%;
   background-color: #d4d4d1;
   background-blend-mode: lighten;
-  padding-top: 40px;
+  padding-top: 30px;
+  margin-bottom: 3rem;
 }
 
 h2 {
@@ -445,8 +518,83 @@ header .logo h1 {
 
 }
 
+@media screen and (min-width: 768px) {
+  .meet-the-animals .text-block {
+    bottom: 2rem;
+    right: 2rem;
+    font-size: 40px;
+  }
+    .who-we-are {
+      flex-direction: row;
+      max-width: 100%;
+    }
+    .the-animals-on-farm ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+       column-gap: 4rem;
+       row-gap: 70px;
+      
+    }
+    .who-we-are .willis-and-maverick-one {
+      margin-top: 90px;
+      margin-right: 20px;
+      margin-left: 5px;
+    }
+    .who-we-are .who-we-are-words {
+      margin-left: 40px;
+      margin-right: 15px;
+    }
+  
+  .how-donations-help .how-donations-help-list-container {
+    flex-direction: row;
+    width: 100%;
+    margin-top: 1.75rem;
+  }
+  .how-donations-help-housing-paragraph {
+    max-width: 100%;
+    margin: 1rem;
+    }
+  .how-donations-help-animal-feed-paragraph {
+      max-width: 100%;
+      margin: 1rem;
+      }
+  .how-donations-help-medical-paragraph {
+        max-width: 100%;
+        margin: 1rem;
+  }
+        
+  }
+@media screen and (min-width: 1100px) {
+  .hero-main {
+  background-position: center -350px;
+  height: 300px;
+  }
 
-
+  .who-we-are {
+    flex-direction: row-reverse;
+    max-width: 100%;
+  }
+  .the-animals-on-farm ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    column-gap: 15px;
+         }
+.the-animals-on-farm img {
+  width: auto;
+}
+.who-we-are .willis-and-maverick-one {
+  margin-bottom: 1em;;
+  margin-left: 40px;
+}
+.who-we-are .who-we-are-words {
+  margin-left: 50px;
+}
+.how-donations-help .how-donations-help-list-container {
+ 
+}
+}
 
 @media screen and (max-width: 800px) {
   .topnav a:not(:first-child) {
@@ -473,47 +621,6 @@ header .logo h1 {
     display: block;
     text-align: left;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .meet-the-animals .text-block {
-    bottom: 2rem;
-    right: 2rem;
-    font-size: 40px;
-  }
-    .who-we-are {
-      flex-direction: row;
-      max-width: 100%;
-    }
-    .the-animals-on-farm ul {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-       column-gap: 4rem;
-       row-gap: 70px;
-      
-    }
-
-@media screen and (min-width: 1100px) {
-  .hero-main {
-  background-position: center -350px;
-  height: 300px;
-  }
-
-  .who-we-are {
-    flex-direction: row-reverse;
-    max-width: 100%;
-  }
-  .the-animals-on-farm ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    column-gap: 15px;
-         }
-.the-animals-on-farm img {
-  width: auto;
-}
-  
 }
 
 
