--- a/style.css
+++ b/style.css
@@ -1,17 +1,10 @@
-/*  
-    The two font families are:
-    font-family: 'PT Sans', sans-serif;
-    font-family: 'Playfair Display', serif;
-*/
-
-
 /* Making changes to the whole body*/
 
 body {
   background-color: #eceee8;
 }
 
-/* This has to do with the navigation links inside the header on the Home page*/
+/* This has to do with the navigation links inside the header*/
 
 .topnav {
   background: #305f75;
@@ -277,11 +270,20 @@ h2 {
   height: 10em;
 }
 
+
+.how-donations-help-item-headers {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.4em;
+  color: #305f75;
+}
+
+
 .how-donations-help-housing-paragraph {
   display: flex;
   text-align: center;
   max-width: 60%;
   margin-top: 0px;
+  font-family: 'Playfair Display', serif;
 }
 
 .how-donations-help-animal-feed-paragraph {
@@ -289,6 +291,7 @@ h2 {
   text-align: center;
   max-width: 60%;
   margin-top: 0px;
+  font-family: 'Playfair Display', serif;
 }
 
 .how-donations-help-medical-paragraph {
@@ -296,7 +299,9 @@ h2 {
   text-align: center;
   max-width: 60%;
   margin-top: 0px;
+  font-family: 'Playfair Display', serif;
 }
+
 .who-we-are {
   display: flex;
   flex-direction: column;
@@ -527,24 +532,9 @@ h2 {
 }
 
 @media screen and (min-width: 768px) {
-  .meet-the-animals .text-block {
-    bottom: 2rem;
-    right: 2rem;
-    font-size: 40px;
-  }
-
   .who-we-are {
     flex-direction: row;
     max-width: 100%;
-  }
-
-  .the-animals-on-farm ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 4rem;
-    row-gap: 70px;
-
   }
 
   .who-we-are .willis-and-maverick-one {
@@ -556,6 +546,10 @@ h2 {
   .who-we-are .who-we-are-words {
     margin-left: 40px;
     margin-right: 15px;
+  }
+
+  .how-donations-help-item-headers {
+    margin-bottom: 0px;
   }
 
   .how-donations-help .how-donations-help-list-container {
@@ -579,6 +573,20 @@ h2 {
     margin: 1rem;
   }
 
+  .meet-the-animals .text-block {
+    bottom: 2rem;
+    right: 2rem;
+    font-size: 40px;
+  }
+
+  .the-animals-on-farm ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 4rem;
+    row-gap: 70px;
+  }
+
 }
 
 @media screen and (min-width: 1100px) {
@@ -592,6 +600,16 @@ h2 {
     max-width: 100%;
   }
 
+  .who-we-are .willis-and-maverick-one {
+    margin-bottom: 4em;
+    ;
+    margin-left: 40px;
+  }
+
+  .who-we-are .who-we-are-words {
+    margin-left: 50px;
+  }
+
   .the-animals-on-farm ul {
     display: flex;
     flex-direction: row;
@@ -602,15 +620,11 @@ h2 {
   .the-animals-on-farm img {
     width: auto;
   }
+}
 
-  .who-we-are .willis-and-maverick-one {
-    margin-bottom: 4em;
-    ;
-    margin-left: 40px;
-  }
-
-  .who-we-are .who-we-are-words {
-    margin-left: 50px;
+@media screen and (max-width: 450px) {
+  .how-donations-help .how-donations-help-header {
+    font-size: 1.5em;
   }
 }
 
@@ -640,5 +654,3 @@ h2 {
     text-align: left;
   }
 }
-
-
